IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
9/20/07: Added ability to visualize the current clipping plane as a
semitransparent plane and improved predictability of clipping planes by making
them rotate around the point closest to the center of the window.

9/20/07: Added ctfplotter for determining defocus in groups of low-dose tilt
images, and ctfphaseflip to correct for CTF in tilted images with phase
flipping only.

9/20/07: Split libimod into pure model library and a utility library.

9/17/07: Added environment variable IMOD_RETAIN_FSCACHE to keep 3dmod from
dismissing data in file system cache while loading it (see man imodenv).

9/16/07: Enhanced install scripts to provide options for specifying the
destination to copy startup scripts to or skipping this step, added help
output, fixed handling of relative path for install location.

9/16/07: Switched high resolution drawing in 3dmod from quadratic to cubic
interpolation, which gives less pixelation at high zoom amd is only 15% slower.

9/14/07: Added script by which Processchunks can put jobs on a cluster queue.

9/12/07: Added options to model2point for getting non-integer output, and
object and contour numbers.

9/11/07: IMOD_3-10-17
9/11/07: Added options to sirtsetup for better management of intermediate
reconstructions, and added more instructions to man page.

9/11/07: Added an option to trimvol to allow scaling of floating point to 
integer.

9/8/07: Fixed Tilt's reading of SHIFT and some other options, broken in PIP 
upgrade, 3.10.13.

9/7/07: Fixed Blendmont to stop truncating integer input data at 0 for mode 1 
or 32767 for mode 6.

8/30/07: Fixed Rotatevol, Matchvol, Warpvol to work with more than 32767 slices
in a layer of cubes.

8/30/07: Made clip flipyz/rotx read multiple slices of data up to 500 MB worth
then write the slices out, reducing real time consumed by 6-10 fold.
